--- a/lib/css/_header.scss
+++ b/lib/css/_header.scss
@@ -696,8 +696,8 @@ body#home {
     @media(max-width:991px) {
         &1 {
             top: 20%;
-            width: 240px;
-            height: 240px;
+            /*width: 240px;
+            height: 240px;*/
         }
         &2 {
             top: 53%;
@@ -713,7 +713,7 @@ body#home {
         }
     }
     @media(max-width:768px) {
-        &1 {
+        /*&1 {
             width: 210px;
             height: 210px;
             font-size: 14px;
@@ -727,7 +727,7 @@ body#home {
                     display: block;
                 }
             }
-        }
+        }*/
         &2 {
             left: 25%;
         }
@@ -742,10 +742,10 @@ body#home {
         }
     }
     @media(max-width:576px) {
-        &1 {
+        /*&1 {
             width: 180px;
             height: 180px;
-        }
+        }*/
         &2 {
             width: 140px;
             height: 140px;
