--- a/lib/css/_header.scss
+++ b/lib/css/_header.scss
@@ -137,7 +137,7 @@ body {
                 }
             }
             @media(max-width:768px) {
-                position: fixed;
+                position: relative;
                 width: 100%;
                 height: auto;
                 z-index: 2;
@@ -304,6 +304,9 @@ body {
                 }
             }
         }
+    }
+    @media(max-width:768px) {
+        display: none;
     }
 }
 
@@ -672,8 +675,8 @@ body#home {
     @media(max-width:991px) {
         &1 {
             top: 20%;
-            /*width: 240px;
-            height: 240px;*/
+            width: 240px;
+            height: 240px;
         }
         &2 {
             top: 53%;
@@ -689,7 +692,7 @@ body#home {
         }
     }
     @media(max-width:768px) {
-        /*&1 {
+        &1 {
             width: 210px;
             height: 210px;
             font-size: 14px;
@@ -703,7 +706,7 @@ body#home {
                     display: block;
                 }
             }
-        }*/
+        }
         &2 {
             left: 25%;
         }
@@ -718,10 +721,10 @@ body#home {
         }
     }
     @media(max-width:576px) {
-        /*&1 {
+        &1 {
             width: 180px;
             height: 180px;
-        }*/
+        }
         &.hex-style1 {
             width: 140px;
             height: 140px;
