--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -135,7 +135,7 @@ body .wrapper__main-menu .menu__wrap.is-opened {
 }
 @media (max-width: 768px) {
   body .wrapper__main-menu {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: auto;
     z-index: 2;
@@ -297,6 +297,11 @@ body.ov-hidden {
   opacity: 1;
   visibility: visible;
   transition: all 0.3s linear;
+}
+@media (max-width: 768px) {
+  .header {
+    display: none;
+  }
 }
 
 body#home .wrapper {
@@ -643,8 +648,8 @@ body#home .header-wrap {
 @media (max-width: 991px) {
   .hex1 {
     top: 20%;
-    /*width: 240px;
-    height: 240px;*/
+    width: 240px;
+    height: 240px;
   }
   .hex2 {
     top: 53%;
@@ -660,22 +665,20 @@ body#home .header-wrap {
   }
 }
 @media (max-width: 768px) {
-  .hex {
-    /*&1 {
-        width: 210px;
-        height: 210px;
-        font-size: 14px;
-        line-height: 16px;
-        .hexagon__text-title {
-            font-size: 14px;
-            line-height: 16px;
-            strong {
-                font-size: 28px;
-                line-height: 29px;
-                display: block;
-            }
-        }
-    }*/
+  .hex1 {
+    width: 210px;
+    height: 210px;
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .hex1 .hexagon__text-title {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .hex1 .hexagon__text-title strong {
+    font-size: 28px;
+    line-height: 29px;
+    display: block;
   }
   .hex2 {
     left: 25%;
@@ -691,11 +694,9 @@ body#home .header-wrap {
   }
 }
 @media (max-width: 576px) {
-  .hex {
-    /*&1 {
-        width: 180px;
-        height: 180px;
-    }*/
+  .hex1 {
+    width: 180px;
+    height: 180px;
   }
   .hex.hex-style1 {
     width: 140px;
