--- a/lib/css/_footer.scss
+++ b/lib/css/_footer.scss
@@ -28,6 +28,12 @@
     &__info {
         p {
             margin-bottom: 10px;
+            a {
+                color: currentColor;
+                &:hover {
+                    color: var(--orange-color);
+                }
+            }
         }
         @media(max-width:768px) {
             margin-bottom: 30px;
